pricing and testimonial added

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
@@ -22,7 +23,7 @@
                     <div class="hero-content text-center">
                         <h1 class="banner-title">Monitor & Maintenance WordPress <i class="fa fa-wordpress" aria-hidden="true"></i> Websites</h1>
                         <p class="banner-content">RoxWP is an all in one solution to debug, manage and monitor 
-                            your websites and servers. It’s an external web application 
+                            your websites and servers. It’s an external</br> web application 
                             for monitoring website and server uptime, error logs and basic functions.</p>
                         <a class="btn btn-primary" href="#">Start Free Trail</a>
                     </div>
@@ -35,7 +36,7 @@
         <section class="hotspot-area">
             <div class="container">
                 <div class="row">
-                    <div class="hotspot-content">
+                    <div class="hotspot-content text-center">
                         <img src="images/hotspot.png" alt="">
                     </div>
                 </div>
@@ -133,7 +134,7 @@
                         <div class="features-header text-center">
                             <h2 class="features-title">All in one WordPress care</h2>
                             <p class="header-content">Focus on your business and run your digital agency,
-                                We'll handle your WordPress headaches including servers, errors, security and more.</p>
+                                We'll handle your </br>WordPress headaches including servers, errors, security and more.</p>
                         </div>
                    </div>
                 </div>
@@ -216,7 +217,7 @@
         </section>
         <!-- features area end -->
 
-        <!-- features area end -->
+        <!-- features area start -->
         <section class="feature-middle-area">
             <div class="container">
                 <div class="row">
@@ -236,7 +237,7 @@
         </section>
         <!-- features area end -->
 
-        <!-- features area end -->
+        <!-- features area start -->
         <section class="feature-bottom-area">
             <div class="container">
                 <div class="row">
@@ -280,7 +281,7 @@
         </section>
         <!-- features area end -->
         
-        <!-- video area end -->
+        <!-- video area start -->
         <section class="video-feedback-area">
             <div class="container">
                 <div class="row">
@@ -291,8 +292,171 @@
                         </div>
                     </div>
                 </div>
+                <div class="row">
+                    <div class="col-lg-6">
+                        <div class="video-content">
+                            <iframe width="540" height="405" src="https://www.youtube.com/embed/9No-FiEInLA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                    <div class="col-lg-6">
+                        <div class="video-content">
+                            <iframe width="540" height="405" src="https://www.youtube.com/embed/9No-FiEInLA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
+        <!-- video area end -->
+
+        <!-- pricing area start -->
+        <section class="pricing-area">
+            <div class="container">
+                <div class="row">                
+                    <div class="col-lg-12">
+                        <div class="pricing-header text-center">
+                            <p class="header-content">Start for free. No credit card required.</p>
+                            <h2 class="header-title">Pay only for what you use. No up-front<br> commitment. Cancel anytime.</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-lg-7">
+                        <div class="pricing-guarantee">
+                            <h3 class="guarantee-title">No risk, cancel anytime! We have a <br><span>10-day</span> money back guarantee!</h3>
+                            <div class="pricing-payment-method">
+                                <span class="payment-content">All Secured Payment</span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                                <span class="payment-logo"><img src="images/payment.png" alt=""></span>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-lg-5">
+                        <img src="images/image2.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- video area end -->
+
+        <!-- testimonial area start -->
+        <section class="testimonial-area">
+            <div class="container">
+                <div class="row">
+                    <div class="swiper testimonial-slider-active">
+                        <div class="swiper-wrapper">
+                            <div class="swiper-slide">
+                                <div class="slide-left">
+                                    <div class="quote-review">
+                                        <div class="testimonial-quote">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                        <ul class="testimonial-review">                                      
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                    <h3 class="slide-title">“I know and it's made my daily life<br> much easier.”</h3>
+                                    <p class="slide-content">I use UptimeRobot to monitor over 100 endpoints on my site. It's changed my<br> reality from getting people tweeting me that part of my sites are down, to knowing<br> it within 60 seconds and immediately 
+                                    being able to fix it. It's the most simple and <br>easy monitoring app I know and it's made my daily life much easier.</p>
+                                </div>
+                                <div class="h-border"></div>
+                                <div class="slide-right">
+                                    <img src="images/author.png" alt="" class="author-img">
+                                    <h6 class="author-title">Nicole Theus</h6>
+                                    <span class="designation">Head of Design</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-left">
+                                    <div class="quote-review">
+                                        <div class="testimonial-quote">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                        <ul class="testimonial-review">                                      
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                    <h3 class="slide-title">“I know and it's made my daily life<br> much easier.”</h3>
+                                    <p class="slide-content">I use UptimeRobot to monitor over 100 endpoints on my site. It's changed my<br> reality from getting people tweeting me that part of my sites are down, to knowing<br> it within 60 seconds and immediately 
+                                    being able to fix it. It's the most simple and <br>easy monitoring app I know and it's made my daily life much easier.</p>
+                                </div>
+                                <div class="h-border"></div>
+                                <div class="slide-right">
+                                    <img src="images/author.png" alt="" class="author-img">
+                                    <h6 class="author-title">Nicole Theus</h6>
+                                    <span class="designation">Head of Design</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-left">
+                                    <div class="quote-review">
+                                        <div class="testimonial-quote">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                        <ul class="testimonial-review">                                      
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                    <h3 class="slide-title">“I know and it's made my daily life<br> much easier.”</h3>
+                                    <p class="slide-content">I use UptimeRobot to monitor over 100 endpoints on my site. It's changed my<br> reality from getting people tweeting me that part of my sites are down, to knowing<br> it within 60 seconds and immediately 
+                                    being able to fix it. It's the most simple and <br>easy monitoring app I know and it's made my daily life much easier.</p>
+                                </div>
+                                <div class="h-border"></div>
+                                <div class="slide-right">
+                                    <img src="images/author.png" alt="" class="author-img">
+                                    <h6 class="author-title">Nicole Theus</h6>
+                                    <span class="designation">Head of Design</span>
+                                </div>
+                            </div>
+                            <div class="swiper-slide">
+                                <div class="slide-left">
+                                    <div class="quote-review">
+                                        <div class="testimonial-quote">
+                                            <i class="fa fa-quote-right" aria-hidden="true"></i>
+                                        </div>
+                                        <ul class="testimonial-review">                                      
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                            <li class="review-list"><i class="fa fa-star"></i></li>
+                                        </ul>
+                                    </div>
+                                    <h3 class="slide-title">“I know and it's made my daily life<br> much easier.”</h3>
+                                    <p class="slide-content">I use UptimeRobot to monitor over 100 endpoints on my site. It's changed my<br> reality from getting people tweeting me that part of my sites are down, to knowing<br> it within 60 seconds and immediately 
+                                    being able to fix it. It's the most simple and <br>easy monitoring app I know and it's made my daily life much easier.</p>
+                                </div>
+                                <div class="h-border"></div>
+                                <div class="slide-right">
+                                    <img src="images/author.png" alt="" class="author-img">
+                                    <h6 class="author-title">Nicole Theus</h6>
+                                    <span class="designation">Head of Design</span>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="swiper-pagination"></div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- testimonial area end -->
+
+        <!-- video area start -->
         <!-- video area end -->
 
     </main>
@@ -301,6 +465,7 @@
 
     <script src="js/jquery-3.6.0.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/swiper-bundle.min.js"></script>
     <script src="js/custom.js"></script>
 </body>
 </html>
